# rust_ffi_example

./: .gitignore  LICENSE  README.md
rest_client/: CMakeLists.txt
rest_client/client/: CMakeLists.txt  Cargo.toml  build.rs
rest_client/client/src/: errors.rs  ffi.rs  lib.rs  plugin_manager.rs  request.rs  request_response_plugin.rs  response.rs  utils.rs
rest_client/gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  wrappers.cpp  wrappers.h
