[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["Krishna Addepalli <coolkrishna31@gmail.com>"]
description = "The business logic for a REST client"
repository = "https://gihub.com/Srikrishna31/rust_ffi_example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib", "lib"]
