[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["Krishna Addepalli <coolkrishna31@gmail.com>"]
description = "The business logic for a REST client"
repository = "https://gihub.com/Srikrishna31/rust_ffi_example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
#error-chain = "0.11.0"
reqwest = "0.9.0"
cookie = "0.17.0"
fern = "0.6.2"
log = "0.4.19"
libc = "0.2.146"
chrono = "0.4.26"
#tokio = {version="1.28.2", features = ["full"]}


[lib]
crate-type = ["cdylib", "lib"]
