set(CMAKE_CXX_STANDARD 17)
set(ENV{Qt6_DIR} "D:\\Qt\\6.5.1\\msvc2019_64")
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
list(APPEND CMAKE_PREFIX_PATH "D:\\Qt\\6.5.1\\msvc2019_64")
#list(APPEND CMAKE_PREFIX_PATH "D:\\Qt\\6.5.1\\msvc2019_64\\lib\\cmake")
#list(APPEND CMAKE_PREFIX_PATH "D:\\Qt\\6.5.1\\mingw_64\\lib\\cmake")
# list(APPEND CMAKE_PREFIX_PATH "/cygdrive/d/Qt/6.5.1")
find_package(Qt6Widgets)

set(SOURCE main.cpp)
add_executable(gui ${SOURCE})
target_compile_features(gui PRIVATE cxx_std_17)
target_compile_options(gui PRIVATE "/Zc:__cplusplus")
target_compile_options(gui PRIVATE "/permissive-")
target_compile_options(gui PRIVATE "/Zc:wchar_t")
get_target_property(CLIENT_DIR client LOCATION)
target_link_libraries(gui PUBLIC Qt6::Widgets)
#target_link_libraries(gui ${CLIENT_DIR}/client${CMAKE_SHARED_LIBRARY_SUFFIX})
add_dependencies(gui client)

#add_custom_command(TARGET client POST_BUILD
#        COMMAND
#        )
